--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_50K/Income_2018-Copy2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_50K/Income_2018-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a734790b",
+   "id": "de8383a8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5e91f9e3",
+   "id": "9acd4962",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "430ddf4b",
+   "id": "5dc7f1cf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cd6c309e",
+   "id": "d56bb229",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7eeb9829",
+   "id": "1a5ebd66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f08b1dc",
+   "id": "7e605b8d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a06068d0",
+   "id": "c1d3b0e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51aad972",
+   "id": "7f68d895",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f3aff70",
+   "id": "a1019537",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43dd61a6",
+   "id": "e4178f35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "147af0cb",
+   "id": "64c6c908",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7f289d3f",
+   "id": "08f18e11",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bff4ec49",
+   "id": "19ad6cf0",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b2f9966e",
+   "id": "b932b28a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5243c389",
+   "id": "943fb630",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca0db09d",
+   "id": "169a6733",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef31ccd7",
+   "id": "303deaf7",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9a91bb0a",
+   "id": "ab81c8c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ba6d13ec",
+   "id": "0e3b51ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a7760b07",
+   "id": "71aac248",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9736e25d",
+   "id": "42a5cd23",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "732598fe",
+   "id": "e8966e4b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bebc652",
+   "id": "e41233b7",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e9082a",
+   "id": "4d1c15d2",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "69eb3156",
+   "id": "ce8ea884",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "67aec281",
+   "id": "264cf658",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db47d0d2",
+   "id": "7ad8bcf4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e4d380c",
+   "id": "61252cc3",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "51554cc1",
+   "id": "1b5fddc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a0fca687",
+   "id": "e50399b8",
    "metadata": {},
    "outputs": [
     {
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d4580ff",
+   "id": "b2e7d4b0",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1979,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "78c79a25",
+   "id": "4beb3195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2000,8 +2000,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b06942a1",
+   "execution_count": null,
+   "id": "e4b8cd50",
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f6891a",
+   "id": "219ecb44",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2619,8 +2619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "80de6c66",
+   "execution_count": 14,
+   "id": "b457d26a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2641,15 +2641,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "046f211d",
+   "execution_count": 15,
+   "id": "baaa6f21",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-24 06:05:29 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-24 05:47:23 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -2660,7 +2660,6 @@
       "{'dataset_split_seed': 400,\n",
       " 'experiment_iteration': 'Exp_iter_4',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
-      " 'intervention_param': 0.0,\n",
       " 'model_init_seed': 400,\n",
       " 'session_uuid': 'c4fbebec-73df-440a-8cb1-6887b4329a73'}\n",
       "\n",
@@ -2671,7 +2670,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-24 06:05:29 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-24 05:47:23 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -2693,24 +2692,30 @@
       "In-domain full_df.shape --  (60000, 9)\n",
       "In-domain init_features_df.shape --  (60000, 10)\n",
       "In-domain number of rows in X_train_val --  50000\n",
-      "In-domain number of rows in X_test --  10000\n",
-      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
-      "Out-of-domain 1 number of rows in X_train_val --  0\n",
-      "Out-of-domain 1 number of rows in X_test --  10000\n"
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-24 06:05:30 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-24 05:47:25 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
+      "Out-of-domain 1 number of rows in X_train_val --  0\n",
+      "Out-of-domain 1 number of rows in X_test --  10000\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60c32da815664795bce79c7c984808f4",
+       "model_id": "f553db2ef5bd4317a2480e990b91b0fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2725,7 +2730,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-24 06:05:30 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-24 05:47:25 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -2740,7 +2745,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-24 06:11:47 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-24 05:53:39 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -3191,7 +3196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-24 06:11:47 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2023-11-24 05:53:39 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -3206,7 +3211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b5decf852ba4143a6fdcfb7e2616172",
+       "model_id": "c651d241e6f24606a56e143e2bc9c922",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3220,7 +3225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "867ebffabcef4737afc971a2523dbe28",
+       "model_id": "02bd29e6322e43b6ab37f138e792c477",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3252,7 +3257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ebb0bd",
+   "id": "efa89da2",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -3261,7 +3266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77afeddf",
+   "id": "9d734ea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3283,7 +3288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9abc0e4",
+   "id": "05015730",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3306,7 +3311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e51e27b",
+   "id": "1131b4c3",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -3315,7 +3320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9557ea1c",
+   "id": "d41962c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3337,7 +3342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fabd024",
+   "id": "7bd270d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3361,7 +3366,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cbc52bce",
+   "id": "33485914",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
