--- a/notebooks/Demography_Composition.ipynb
+++ b/notebooks/Demography_Composition.ipynb
@@ -2,24 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.533215Z",
-     "start_time": "2023-10-19T14:10:30.444228Z"
+     "end_time": "2024-01-11T11:45:25.268902Z",
+     "start_time": "2024-01-11T11:45:24.834771Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import os\n",
@@ -39,33 +30,30 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.533823Z",
-     "start_time": "2023-10-19T14:10:30.474123Z"
+     "end_time": "2024-01-11T11:45:25.279463Z",
+     "start_time": "2024-01-11T11:45:25.269540Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "from virny.datasets.base import BaseDataLoader\n",
-    "from virny.datasets.data_loaders import LawSchoolDataset\n",
+    "from virny.datasets.data_loaders import StudentPerformancePortugueseDataset\n",
     "from virny.utils.protected_groups_partitioning import create_test_protected_groups"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.534036Z",
-     "start_time": "2023-10-19T14:10:30.496801Z"
+     "end_time": "2024-01-11T11:45:25.980629Z",
+     "start_time": "2024-01-11T11:45:25.279807Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def get_proportions(protected_groups, X_data):\n",
@@ -86,98 +74,61 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.552062Z",
-     "start_time": "2023-10-19T14:10:30.531572Z"
+     "end_time": "2024-01-11T11:45:25.998073Z",
+     "start_time": "2024-01-11T11:45:25.980810Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "# sensitive_attributes_dct = {'male': '0.0', 'race': 'Non-White', 'male & race': None}\n",
     "sensitive_attributes_dct = {'sex': 'F'}"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.575913Z",
-     "start_time": "2023-10-19T14:10:30.553380Z"
+     "end_time": "2024-01-11T11:45:26.013798Z",
+     "start_time": "2024-01-11T11:45:25.997877Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
-   "source": [
-    "class StudentPerformanceDataset(BaseDataLoader):\n",
-    "    def __init__(self, dataset_path=None):\n",
-    "        df = pd.read_csv(dataset_path, delimiter=';')\n",
-    "\n",
-    "        target = 'G3'\n",
-    "        df[target] = (df[target] >= 10) * 1\n",
-    "\n",
-    "        df['G1'] = (df['G1'] >= 10) * 1\n",
-    "        df['G2'] = (df['G2'] >= 10) * 1\n",
-    "\n",
-    "\n",
-    "        categorical_columns = ['Mjob', 'Fjob', 'reason', 'guardian', 'sex']\n",
-    "        numerical_columns = ['age', 'Medu', 'Fedu', 'traveltime', 'studytime', 'failures',\n",
-    "                             'famrel', 'freetime', 'goout', 'Dalc', 'Walc', 'health',\n",
-    "                             'absences', 'G1', 'G2']\n",
-    "\n",
-    "        super().__init__(\n",
-    "            full_df=df,\n",
-    "            target=target,\n",
-    "            numerical_columns=numerical_columns,\n",
-    "            categorical_columns=categorical_columns,\n",
-    "        )"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.590824Z",
-     "start_time": "2023-10-19T14:10:30.572291Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  ...  \\\n0     GP   F   18       U     GT3       A     4     4  at_home   teacher  ...   \n1     GP   F   17       U     GT3       T     1     1  at_home     other  ...   \n2     GP   F   15       U     LE3       T     1     1  at_home     other  ...   \n3     GP   F   15       U     GT3       T     4     2   health  services  ...   \n4     GP   F   16       U     GT3       T     3     3    other     other  ...   \n\n  famrel freetime  goout  Dalc  Walc health absences G1 G2 G3  \n0      4        3      4     1     1      3        6  0  0  0  \n1      5        3      3     1     1      3        4  0  0  0  \n2      4        3      2     2     3      3       10  0  0  1  \n3      3        2      2     1     1      5        2  1  1  1  \n4      4        3      2     1     2      5        4  0  1  1  \n\n[5 rows x 33 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>school</th>\n      <th>sex</th>\n      <th>age</th>\n      <th>address</th>\n      <th>famsize</th>\n      <th>Pstatus</th>\n      <th>Medu</th>\n      <th>Fedu</th>\n      <th>Mjob</th>\n      <th>Fjob</th>\n      <th>...</th>\n      <th>famrel</th>\n      <th>freetime</th>\n      <th>goout</th>\n      <th>Dalc</th>\n      <th>Walc</th>\n      <th>health</th>\n      <th>absences</th>\n      <th>G1</th>\n      <th>G2</th>\n      <th>G3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>18</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>A</td>\n      <td>4</td>\n      <td>4</td>\n      <td>at_home</td>\n      <td>teacher</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>6</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>17</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>at_home</td>\n      <td>other</td>\n      <td>...</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>at_home</td>\n      <td>other</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>10</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>4</td>\n      <td>2</td>\n      <td>health</td>\n      <td>services</td>\n      <td>...</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>16</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>3</td>\n      <td>3</td>\n      <td>other</td>\n      <td>other</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 33 columns</p>\n</div>"
+      "text/plain": "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  ...  \\\n0     GP   F   18       U     GT3       A     4     4  at_home   teacher  ...   \n1     GP   F   17       U     GT3       T     1     1  at_home     other  ...   \n2     GP   F   15       U     LE3       T     1     1  at_home     other  ...   \n3     GP   F   15       U     GT3       T     4     2   health  services  ...   \n4     GP   F   16       U     GT3       T     3     3    other     other  ...   \n\n  famrel freetime  goout  Dalc  Walc health absences  G1  G2 class  \n0      4        3      4     1     1      3        4   0  11     1  \n1      5        3      3     1     1      3        2   9  11     1  \n2      4        3      2     2     3      3        6  12  13     1  \n3      3        2      2     1     1      5        0  14  14     1  \n4      4        3      2     1     2      5        0  11  13     1  \n\n[5 rows x 33 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>school</th>\n      <th>sex</th>\n      <th>age</th>\n      <th>address</th>\n      <th>famsize</th>\n      <th>Pstatus</th>\n      <th>Medu</th>\n      <th>Fedu</th>\n      <th>Mjob</th>\n      <th>Fjob</th>\n      <th>...</th>\n      <th>famrel</th>\n      <th>freetime</th>\n      <th>goout</th>\n      <th>Dalc</th>\n      <th>Walc</th>\n      <th>health</th>\n      <th>absences</th>\n      <th>G1</th>\n      <th>G2</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>18</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>A</td>\n      <td>4</td>\n      <td>4</td>\n      <td>at_home</td>\n      <td>teacher</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>0</td>\n      <td>11</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>17</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>at_home</td>\n      <td>other</td>\n      <td>...</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>9</td>\n      <td>11</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>at_home</td>\n      <td>other</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>6</td>\n      <td>12</td>\n      <td>13</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>4</td>\n      <td>2</td>\n      <td>health</td>\n      <td>services</td>\n      <td>...</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>0</td>\n      <td>14</td>\n      <td>14</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>16</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>3</td>\n      <td>3</td>\n      <td>other</td>\n      <td>other</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>5</td>\n      <td>0</td>\n      <td>11</td>\n      <td>13</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 33 columns</p>\n</div>"
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_loader = StudentPerformanceDataset(dataset_path='../data/student-mat.csv')\n",
+    "data_loader = StudentPerformancePortugueseDataset()\n",
     "data_loader.full_df.head()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.617161Z",
-     "start_time": "2023-10-19T14:10:30.590715Z"
+     "end_time": "2024-01-11T11:45:29.049085Z",
+     "start_time": "2024-01-11T11:45:29.008044Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "(395, 33)"
+      "text/plain": "(649, 33)"
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,20 +139,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.641087Z",
-     "start_time": "2023-10-19T14:10:30.617634Z"
+     "end_time": "2024-01-11T11:45:32.858420Z",
+     "start_time": "2024-01-11T11:45:32.830085Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "F    208\nM    187\nName: sex, dtype: int64"
+      "text/plain": "F    383\nM    266\nName: sex, dtype: int64"
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,14 +163,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.692903Z",
-     "start_time": "2023-10-19T14:10:30.636965Z"
+     "end_time": "2024-01-11T11:45:34.731282Z",
+     "start_time": "2024-01-11T11:45:34.701448Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "protected_groups = create_test_protected_groups(data_loader.X_data, data_loader.X_data, sensitive_attributes_dct)"
@@ -227,21 +178,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.716716Z",
-     "start_time": "2023-10-19T14:10:30.656637Z"
+     "end_time": "2024-01-11T11:45:36.619987Z",
+     "start_time": "2024-01-11T11:45:36.592968Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sex_priv: 187\n",
-      "sex_dis: 208\n"
+      "sex_priv: 266\n",
+      "sex_dis: 383\n"
      ]
     }
    ],
@@ -252,20 +203,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.717426Z",
-     "start_time": "2023-10-19T14:10:30.675141Z"
+     "end_time": "2024-01-11T11:45:36.972504Z",
+     "start_time": "2024-01-11T11:45:36.945125Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "dict_keys(['sex_priv', 'sex_dis'])"
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,21 +227,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.718933Z",
-     "start_time": "2023-10-19T14:10:30.693043Z"
+     "end_time": "2024-01-11T11:45:37.947302Z",
+     "start_time": "2024-01-11T11:45:37.916551Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sex_priv: 0.473\n",
-      "sex_dis: 0.527\n"
+      "sex_priv: 0.41\n",
+      "sex_dis: 0.59\n"
      ]
     }
    ],
@@ -300,22 +251,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.770584Z",
-     "start_time": "2023-10-19T14:10:30.710693Z"
+     "end_time": "2024-01-11T11:45:39.728568Z",
+     "start_time": "2024-01-11T11:45:39.701278Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sex_priv: 0.706\n",
-      "sex_dis: 0.639\n",
-      "overall: 0.671\n"
+      "sex_priv: 0.812\n",
+      "sex_dis: 0.869\n",
+      "overall: 0.846\n"
      ]
     }
    ],
@@ -325,8 +276,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T14:10:30.772004Z",
-     "start_time": "2023-10-19T14:10:30.730251Z"
+     "end_time": "2024-01-11T11:45:40.013882Z",
+     "start_time": "2024-01-11T11:45:39.985074Z"
     }
    }
   },
